minor db uri change

--- a/BackEndServer/.env
+++ b/BackEndServer/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-DB = mongodb+srv://ashutosh:ashuashu123@cluster0.sbbcw.mongodb.net/users
+DB = mongodb+srv://ashutosh:ashuashu123@cluster0.sbbcw.mongodb.net/sms
 SECRET_KEY_ON_SERVER = secretKey
 
 // Google Api
